$Id: History,v 1.26 2002-09-17 15:42:08 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

- Sep.17, 2002   H.Kurashige (procman-V04-01-00)
- Add new commands of "/process/setVerbose " for G4ProcessTableMessenger

- Apr.15, 2002   H.Kurashige (procman-V04-00-00)
- Add G4VProcess::GetCurrentInteractionLength()
- Fixed bugs in PostStepDoIt when MeanFreePath is equal to DBL_MAX
 
- Oct. 11, 2001  G.Cosmo (procman-V03-02-04)
- Replaced inclusion of ctoken.h with G4Tokenizer.hh in
  G4ProcessTableMessenger.cc.
- Co-works with tag "globals-V03-02-03" where the STLInterface
  module has been removed.

- Sep. 20, 2001  H.Kurashige (procman-V03-02-03)
- Modify for STL migration for materials

- Sep. 19, 2001  H.Kurashige (procman-V03-02-02)
- Add Set/GetProcessManager to G4VProcess and modify 
  G4ProcessManager::AddProcess to invoke SetProcessManager 

- Aug 16,  H.Kurashige (procman-V03-02-01)
- Fixed bugs in the copy constructor of G4ProcessManager. 

- July, 31 H.Kurashige (procman-V03-02-00)
- Modify arguments for Retreive/StorePhysicsTable

- May 22, 01  G.Cosmo (procman-V03-01-00)
- Cleared pedantic warnings from Linux-g++ ISO/ANSI setup.

- Mar 12, 01  H.Kurashige (procman-V03-00-00)