@@ -1,4 +1,4 @@
-$Id: History,v 1.26 2002-09-17 15:42:08 kurasige Exp $
+$Id: History,v 1.27 2002-11-28 00:32:23 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+- Nov.28, 2002   H.Kurashige (procman-V04-01-01)
+- Fixed memory leak in G4ProcessTable
 
 - Sep.17, 2002   H.Kurashige (procman-V04-01-00)
 - Add new commands of "/process/setVerbose " for G4ProcessTableMessenger
